--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -4,7 +4,8 @@ uvicorn[standard]==0.24.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
 alembic==1.12.1
-python-jose[cryptography]==3.3.0
+PyJWT>=2.8.0
+cryptography>=41.0.0
 passlib[bcrypt]==1.7.4
 bcrypt==3.2.2
 python-multipart==0.0.6
