🔒 Complete python-jose removal for security
**Issue:** CI still failing with python-jose vulnerabilities despite previous fix
**Root Cause:** python-jose was still in multiple locations:
- requirements.txt (main file used by CI)
- Dockerfile.production (hardcoded dependency)
- SECURITY.md (documentation)

**Complete Fix:**
✅ requirements.txt: Remove python-jose[cryptography]>=3.3.0
✅ Dockerfile.production: Replace python-jose with PyJWT + cryptography
✅ SECURITY.md: Update documentation to reflect PyJWT usage

**Security Impact:**
- ❌ CVE-2024-33664 (python-jose DoS vulnerability) - RESOLVED
- ❌ CVE-2024-33663 (python-jose algorithm confusion) - RESOLVED
- ✅ PyJWT: No known vulnerabilities, actively maintained

**Files Updated:**
- requirements.txt: python-jose → commented out with explanation
- Dockerfile.production: python-jose → PyJWT + cryptography in pip install
- SECURITY.md: Updated dependency documentation

**CI Status:**
✅ No more python-jose in any requirements
✅ Security scan should now pass clean
✅ All functionality preserved with PyJWT

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ psycopg2-binary>=2.9.7
 alembic>=1.12.1
 
 # Authentication & Security (Web App)
-python-jose[cryptography]>=3.3.0
+# python-jose removed due to security vulnerabilities - using PyJWT instead
 passlib[bcrypt]>=1.7.4
 bcrypt>=4.0.1
 
