🎯 Consolidate requirements into single unified file
**Problem:** Confusing dual requirements structure
- requirements.txt (main) - Used by CI, some dependencies
- web_app/requirements.txt - Used by Docker, different versions

**Issues Fixed:**
❌ Version conflicts (e.g., requests>=2.28.0 vs ==2.31.0)
❌ Missing dependencies (PyJWT not in web_app requirements)
❌ Deployment confusion (different files for different contexts)
❌ Maintenance overhead (updates needed in two places)
❌ Inconsistent versioning strategies

**Solution: Single Unified Requirements**
✅ requirements.txt - ALL dependencies for complete system
✅ Organized by functionality with clear comments
✅ Consistent versioning strategy
✅ Includes all CLI + Web App dependencies
✅ Security fixes included (PyJWT, cryptography)

**Key Dependencies Unified:**
- Core: pandas, numpy, requests
- Web: fastapi, uvicorn, sqlalchemy
- Auth: PyJWT, cryptography, passlib
- Config: pydantic, python-dotenv
- Files: openpyxl, xlsxwriter

**Files Updated:**
- requirements.txt: Comprehensive unified requirements
- Dockerfile: Use main requirements.txt
- Dockerfile.production: Simplified to single requirements
- deploy_incremental.sh: Updated file references
- Deleted: web_app/requirements.txt (redundant)

**Benefits:**
✅ Single source of truth for dependencies
✅ No more version conflicts
✅ Simplified Docker builds
✅ Easier maintenance and updates
✅ Clear deployment story

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -18,11 +18,9 @@ RUN apt-get update && apt-get install -y \
 WORKDIR /wheels
 
 # Copy requirements and build wheels to avoid recompilation
-COPY requirements.txt web_app/requirements.txt ./
+COPY requirements.txt ./
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /wheels \
-    -r requirements.txt && \
-    pip wheel --no-cache-dir --no-deps --wheel-dir /wheels \
-    -r web_app/requirements.txt
+    -r requirements.txt
 
 # Stage 2: Production image
 FROM python:3.11-slim-bookworm
