--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,65 @@
 # ==============================================================================
-# RMS Booking Chart Defragmenter - Requirements
+# RMS Booking Chart Defragmenter - Unified Requirements
 # ==============================================================================
-# This file contains all dependencies for both the CLI application
-# and the web interface
+# All dependencies for the complete system (CLI analysis + Web interface)
 
-# Core Data Processing (Original App)
+# Core Data Processing & Analysis
 pandas>=1.5.0
 numpy>=1.21.0
 openpyxl>=3.0.9
-requests>=2.28.0
-
-# Web Framework (Web App)
-fastapi>=0.104.1
-uvicorn[standard]>=0.24.0
-jinja2>=3.1.2
-python-multipart>=0.0.6
-
-# Database (Web App)
-sqlalchemy>=2.0.23
-psycopg2-binary>=2.9.7
-alembic>=1.12.1
-
-# Authentication & Security (Web App)
-# python-jose removed due to security vulnerabilities - using PyJWT instead
-passlib[bcrypt]>=1.7.4
-bcrypt>=4.0.1
-
-# HTTP Client & API
-httpx>=0.25.2
-aiohttp>=3.9.1
-
-# Date and Time Handling
 python-dateutil>=2.8.2
 pytz>=2023.3
 
-# Email Support (Original App)
-# smtplib2 removed - not available in PyPI, using standard smtplib
+# Web Framework
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+jinja2==3.1.2
+python-multipart==0.0.6
+aiofiles>=23.2.0
+
+# Database & ORM
+sqlalchemy==2.0.23
+psycopg2-binary>=2.9.7
+alembic==1.12.1
+
+# Authentication & Security
+PyJWT>=2.8.0
+cryptography>=41.0.0
+passlib[bcrypt]==1.7.4
+bcrypt>=4.0.1
+
+# HTTP Clients & APIs
+requests>=2.31.0
+httpx>=0.25.2
+aiohttp>=3.9.1
+
+# Configuration & Settings
+pydantic==2.5.0
+pydantic-settings==2.1.0
+python-dotenv>=1.0.0
+email-validator>=2.1.0
 
 # File Format Support
 xlsxwriter>=3.1.9
 python-docx>=0.8.11
 
-# Utilities
+# CLI & Utilities
 click>=8.1.7
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
-python-dotenv>=1.0.0
 
-# Async Support
-asyncio-mqtt>=0.13.0
+# Email Support
+# Using Python's built-in smtplib (smtplib2 not available in PyPI)
+
+# Async & WebSocket Support
 websockets>=12.0
 
-# Development Tools (Optional)
+# Scheduling & Cron
+schedule>=1.2.0
+croniter>=1.4.1
+
+# Development & Testing (Optional)
 pytest>=7.4.3
 pytest-asyncio>=0.21.1
 pytest-cov>=4.1.0
 
-# Monitoring and Logging
+# Monitoring & Logging
 structlog>=23.1.0
-
-# Additional Utilities
-schedule>=1.2.0
-croniter>=1.4.1
-
-# HTTP Tools
-curl-cffi>=0.5.10
