--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -53,7 +53,7 @@ RUN groupadd -r appuser && useradd -r -g appuser appuser \
 COPY --from=builder /wheels /wheels
 RUN pip install --no-cache-dir --find-links /wheels \
     pandas numpy fastapi uvicorn sqlalchemy psycopg2-binary \
-    PyJWT cryptography passlib bcrypt jinja2 python-dotenv \
+    PyJWT cryptography passlib bcrypt "jinja2>=3.1.6" python-dotenv \
     pydantic pydantic-settings aiofiles httpx requests \
     && rm -rf /wheels
 
