--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ pytz>=2023.3
 # Web Framework
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-jinja2==3.1.2
+jinja2>=3.1.6
 python-multipart==0.0.6
 aiofiles>=23.2.0
 
