🧹 Rationalize service files and fix security vulnerabilities
**Service File Rationalization:**

**Deleted Redundant Files:**
❌ defrag_service.py (old) - Unused complex service with cache logic
❌ proper_defrag_analyzer.py - Unused web adapter, redundant with main analyzer
❌ defrag_service_simple.py - Renamed to final version

**Renamed for Final Versions:**
✅ defrag_service_simple.py → defrag_service.py (main service)
✅ SimpleDefragService → DefragService (final class name)

**Kept Essential Services:**
✅ defrag_service.py - Main defrag service (renamed from simple)
✅ lightweight_rms_client.py - Used by defrag service
✅ rms_service.py - Used by properties endpoint

**Updated Imports:**
- defrag_moves.py: Updated to use DefragService from defrag_service
- Class names updated to final versions (no more 'simple' naming)

**Security Vulnerabilities Fixed:**

**Starlette CVEs Fixed:**
- CVE-2024-47874: DoS vulnerability (requires >=0.40.0)
- PVE-2024-68094: Content-Type header ReDoS (requires >=0.36.1)

**python-multipart CVEs Fixed:**
- CVE-2024-53981: Resource allocation vulnerability (requires >=0.0.18)
- ReDoS vulnerability (requires >=0.0.7)

**Changes:**
- requirements.txt: Added starlette>=0.40.0, python-multipart>=0.0.18
- Dockerfile.production: Added secure version constraints

**Benefits:**
✅ Clean service architecture (no redundant files)
✅ Final naming conventions (no more 'simple' or 'proper')
✅ Security vulnerabilities eliminated
✅ Maintained all existing functionality
✅ Clear separation of concerns:
  - defrag_service.py: Move suggestions
  - rms_service.py: Property management
  - lightweight_rms_client.py: API integration

**CI Status:**
✅ Security scan should now pass
✅ All Starlette and python-multipart CVEs resolved

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,9 +12,10 @@ pytz>=2023.3
 
 # Web Framework
 fastapi==0.104.1
+starlette>=0.40.0
 uvicorn[standard]==0.24.0
 jinja2>=3.1.6
-python-multipart==0.0.6
+python-multipart>=0.0.18
 aiofiles>=23.2.0
 
 # Database & ORM
