--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -52,8 +52,8 @@ RUN groupadd -r appuser && useradd -r -g appuser appuser \
 # Copy wheels from builder stage and install
 COPY --from=builder /wheels /wheels
 RUN pip install --no-cache-dir --find-links /wheels \
-    pandas numpy fastapi uvicorn sqlalchemy psycopg2-binary \
-    PyJWT cryptography passlib bcrypt "jinja2>=3.1.6" python-dotenv \
+    pandas numpy fastapi "starlette>=0.40.0" uvicorn sqlalchemy psycopg2-binary \
+    PyJWT cryptography passlib bcrypt "jinja2>=3.1.6" "python-multipart>=0.0.18" python-dotenv \
     pydantic pydantic-settings aiofiles httpx requests \
     && rm -rf /wheels
 
