Fix GitHub Security tab upload permissions for SARIF results
- Add security-events: write permission to all security workflows
- Add checkout step to security-scan job for proper git context
- Add category and file existence check for SARIF upload
- Fix 'Resource not accessible by integration' error for security uploads
- Ensure proper permissions for uploading vulnerability scan results

--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  security-events: write  # Required for uploading security results
+
 jobs:
   trufflehog:
     runs-on: ubuntu-latest
