--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -13,6 +13,11 @@ on:
         required: false
         default: 'latest'
 
+permissions:
+  contents: read
+  packages: write
+  security-events: write  # Required for uploading SARIF results
+
 env:
   REGISTRY: docker.io
   IMAGE_NAME: enaran/rms-defragmenter
@@ -144,6 +149,9 @@ jobs:
     if: github.event_name != 'pull_request'
     
     steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -162,9 +170,10 @@ jobs:
         
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
-      if: always()
+      if: always() && hashFiles('trivy-results.sarif') != ''
       with:
         sarif_file: 'trivy-results.sarif'
+        category: 'container-security'
         
     - name: Run container structure test
       run: |
